--- a/src/less/includes/structure/top-header.less
+++ b/src/less/includes/structure/top-header.less
@@ -145,7 +145,7 @@
 
 			  .content {
 					li{
-						border-bottom: 1px solid @my-text-gray-light;
+						border-bottom: 1px solid @pe-topheader-item-seeall-bg;
 
 						&:hover{
 							background: @pe-topheader-item-active-bg;						}
@@ -153,7 +153,7 @@
 				}
 
 				.foot {
-					padding: 15px;
+					padding: 10px;
 					background: @pe-topheader-item-seeall-bg;
 
 					li{
@@ -173,8 +173,7 @@
 		.my-messages{
 
 			.mess-body{
-				min-height:85px;
-				padding: 15px;
+				padding: 10px;
 
 				span{
 					color: @my-text-gray-dark;
@@ -195,9 +194,8 @@
 			}
 
 			img{
-				float:left;
-				padding:10px;
-				width: 70px;
+				float: left;
+				padding: 8px;
 			}
 		}
 
@@ -207,12 +205,11 @@
 				.icon{
 					float:left;
 					color: @my-text-gray-light;
-					padding: 27px 20px;
+					padding: 22px 20px;
 					font-size: 35px;
 				}
 				.alert-body{
-					padding: 15px 15px 15px 0;
-					min-height: 85px;
+					padding: 10px 10px 10px 0;
 					display: table;
 					span{
 						color: @my-text-gray-dark;
@@ -253,7 +250,7 @@
 					color: @my-text-gray-dark;
 					font-size: 12px;
 					.sett-body{
-						padding: 15px;
+						padding: 10px;
 						font-size: 14px;
 
 						.name{
